--- a/_css/main.css
+++ b/_css/main.css
@@ -1,15 +1,30 @@
-.county {
-    fill: #FF1E00;
-    stroke: #FF1E00;
+.background {
+  fill: none;
+  pointer-events: all;
 }
-.minbounds {
-    fill: none;
-    stroke: #FF0;
-    stroke-dasharray: 2, 2;
-    stroke-linejoin: round;
+
+#counties {
+  fill: #aaa;
 }
-.majbounds {
-    fill: none;
-    stroke: #fff;
-    stroke-linejoin: round;
+
+#counties .active {
+  fill: orange;
+}
+
+#county-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.05px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
 }
