--- a/_css/main.css
+++ b/_css/main.css
@@ -1,30 +1,54 @@
+.container {
+    width: 100%;
+}
 .background {
-  fill: none;
-  pointer-events: all;
+    fill: none;
+    pointer-events: all;
 }
-
 #counties {
-  fill: #aaa;
+    fill: #aaa;
 }
-
 #counties .active {
-  fill: orange;
+    fill: orange;
 }
-
+.county:hover {
+    stroke: #666;
+    stroke-width: 0.75px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+}
+.borders {
+    fill: none;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    pointer-events: none;
+}
 #county-borders {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 0.05px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
+    stroke: #fff;
+    stroke-width: 0.05px;
 }
-
 #state-borders {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 0.5px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
+    stroke: #00ff00;
+    stroke-width: 0.5px;
+}
+#new-borders {
+    stroke: #ff0000;
+    stroke-width: 0.75px;
+}
+.bar {
+    fill: steelblue;
+}
+.bar:hover {
+    fill: brown;
+}
+.axis {
+    font: 10px sans-serif;
+}
+.axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+.x.axis path {
+    display: none;
 }
