--- a/_css/main.css
+++ b/_css/main.css
@@ -48,14 +48,15 @@
     stroke: #CCC;
 }
 
-.bar {
+/*.bar {
     fill: steelblue;
-}
+}*/
 .bar:hover {
     fill: orange;
 }
 .barlabels {
     margin-bottom: 5px;
+    font-size: .8em;
 }
 .axis {
     font: 10px sans-serif;
