--- a/_css/main.css
+++ b/_css/main.css
@@ -1,6 +1,23 @@
 .container {
     width: 100%;
 }
+.slideout {
+    background-color: rgba(16, 17, 53, 0.7);
+    border-color: #dcdcdc;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe8e8e8',endColorstr='#fff5f5f5',GradientType=0);
+-webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 1px 0 rgba(255,255,255,0.1);
+box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 1px 0 rgba(255,255,255,0.1);
+color:#ddd;
+}
+.slidehead {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size:24px;
+    border-bottom: 1px solid #bbb;
+}
+#slider {
+    display:none
+}
 .navbar{ margin-bottom: 15px}
 .navbar-form {
     border-left: 1px solid #666;
