--- a/_css/main.css
+++ b/_css/main.css
@@ -4,10 +4,16 @@
 #slideout {
     background-color: rgba(6, 7, 31, 0.8);
     border-color: #dcdcdc;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe8e8e8',endColorstr='#fff5f5f5',GradientType=0);
--webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 1px 0 rgba(255,255,255,0.1);
-box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 1px 0 rgba(255,255,255,0.1);
-color:#ddd;
+    -webkit-box-shadow: inset -5px 0px 15px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: inset -5px 0px 15px 0px rgba(0,0,0,0.75);
+    box-shadow: inset -5px 0px 15px 0px rgba(0,0,0,0.75);
+    color:#ddd;
+}
+#slideout a {
+    color:#fff;
+}
+#slideout a:hover{
+    color:#428bca;
 }
 .slidehead {
     margin-top: 20px;
@@ -85,6 +91,9 @@ input[type=checkbox]{
 }
 .x.axis path {
     display: none;
+}
+#county-info {
+    height:70px;
 }
 #key-container {
     margin:20px 0;
